--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ install:
 script:
   - black -q --check money_bot
   - isort -rc money_bot
-  - pylint -E money_bo
+  - pylint -E money_bot
 
 after_success:
   - pylint money_bot
