--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,7 @@ isort==4.3.21
 lazy-object-proxy==1.4.1
 marshmallow==2.20.1
 mccabe==0.6.1
+motor==2.0.0
 multidict==4.5.2
 pylint==2.3.1
 pymongo==3.9.0
