--- a/.travis.yml
+++ b/.travis.yml
@@ -11,3 +11,10 @@ script:
 
 after_success:
   - pylint money_bot
+
+deploy:
+  provider: heroku
+  api_key: $HEROKU_API_KEY
+  app: money-bot-summer-school
+  on: 
+    branch: develop
